# evaluacion-final

./: .env  historial_consultas.txt  main.py  pyproject.toml  utils.py
d/: main.py  main2.py  utils.py
